force.com/CALM/src/objects/SweptAction__c.object
<CustomObject>
    <description>Summary data of the Actions for a given Sweeper object.</description>
    <fields>
        <fullName>cnt__c</fullName>
        <description>Number of occurrences of the Action</description>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dt__c</fullName>
        <description>Datatype of the Action (e for Event or s for Screen)</description>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n__c</fullName>
        <description>Name of the Action</description>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>swp__c</fullName>
        <description>The Sweeper that this SweepedAction is associated with</description>
        <label>Sweeper</label>
        <referenceTo>Sweeper__c</referenceTo>
        <relationshipName>act</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Swept Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>n__c</columns>
        <columns>cnt__c</columns>
        <columns>swp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SweptAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swept Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>